<resources>
    <string name="app_name">LostAndFound</string>
    <string name="search_hint">White Tupperware Bottle</string>
    <string name="recent_lost_item">Recent lost Item:</string>
    <string name="request_lost_item">Request lost Item:</string>
    <string name="item_name">Item Name</string>
    <string name="descriptions">Descriptions</string>
    <string name="place_date_time">Place, Date, Time</string>
    <string name="more_items">More Items</string>
    <string name="nav_home">Home</string>
    <string name="nav_lost">Lost</string>
    <string name="nav_request">Request</string>
    <string name="nav_profile">Profile</string>
    <string name="login_title">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="already_have_account">Already have account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="lost_items_title">Recent Lost Items</string>
    <string name="pagination_text">1 of 5</string>

    <string name="filter_title">Filter</string>
    <string name="filter_type">Type</string>
    <string name="filter_brand">Brand</string>
    <string name="filter_date">Date</string>
    <string name="filter_time">Time</string>
    <string name="filter_dash">---</string>
    <string name="filter_date_range">--/-- to --/--</string>
    <string name="filter_time_range">--:-- to --:--</string>
    <string name="btn_search">Search</string>

    <string name="details_brand">Brand: ---</string>
    <string name="details_color">Color: ---</string>
    <string name="details_date">Date: ---</string>
    <string name="details_time">Time: ---</string>
    <string name="details_place">Place: ---</string>
    <string name="details_descriptions">Descriptions: ---</string>
    <string name="details_ellipsis">...</string>
    <string name="btn_its_mine">It\'s mine</string>
    <string name="gallery_more">+3</string>

    <string name="profile_name">Name</string>
    <string name="profile_bio">(bio)</string>
    <string name="btn_logout">Log out</string>
</resources>